compilateurDeca/src/test/deca/syntax/valid/avec_objet/new_call.deca
class A{
    int x(int a){
        return a+1;
    }
}
{
    A a=new A();
    println(a.x(2));
}