compilateurDeca/src/test/deca/syntax/invalid/objet/missing_parenth.deca
// Description:
//   appel de méthode avec parenthèse fermante manquante.
// Resultats:
//    Echec (erreur de syntaxe)
//
// Historique:
//    cree le 15/01/2026

class A { int x(int a){ return a; } }
{
    A a;
    a = new A();
    println(a.x(2);
}
